# local-llm-benchmark

./: .env-example  .gitignore  README.md  init_env.py  pyproject.toml
config/: api_pricing.json  logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_airllm_integration.md  PRD_api_gatekeeper.md  PRD_benchmarking_methodology.md  PRD_economic_analysis.md  PRD_qlora.md  PRD_quantization.md  PRD_roofline.md  TODO.md  prompts_book.md
notebooks/: qlora_training.ipynb  qlora_training_executed_20260701T195438Z.ipynb
results/: baseline_llama3-8b-fp16_20260630T221156Z.json  baseline_llama3-8b-fp16_20260701T120918Z_failure.json  baseline_llama3-8b-fp16_20260701T125500Z_failure.json  baseline_llama3-8b-fp16_20260701T125656Z_failure.json  baseline_qwen2-7b-q4_20260701T122111Z_failure.json  baseline_qwen2-7b-q4_20260701T123021Z_failure.json  baseline_qwen2-7b-q4_20260701T125744Z_failure.json  hardware_profile.json  plumbing_20260630T184908Z.json  plumbing_20260630T194154Z.json  plumbing_20260701T165601Z.json  qlora_loss_20260701T195438Z.csv  qlora_tinyllama-1.1b_20260701T195438Z.json  witness_baseline_llama3-8b-fp16_20260701T125456Z.json  witness_baseline_llama3-8b-fp16_20260701T125650Z.json  witness_baseline_qwen2-7b-q4_20260701T125740Z.json
src/on_prem_llm_lab/: __init__.py  constants.py
src/on_prem_llm_lab/backends/: airllm_backend.py  api_backend.py  base.py  direct_backend.py
src/on_prem_llm_lab/cli/: backend_cmds.py  main.py
src/on_prem_llm_lab/mixins/: energy_accounting_mixin.py  manifest_logging_mixin.py  memory_sampling_mixin.py  timing_mixin.py
src/on_prem_llm_lab/sdk/: __init__.py  _future_stubs.py  sdk.py
src/on_prem_llm_lab/services/: airllm_service.py  baseline_service.py  benchmark_runner.py  break_even_chart.py  chart_style.py  economic_analyzer.py  economic_math.py  hardware_scanner.py  hardware_scanner_detect.py  hardware_scanner_types.py  hardware_scanner_writes.py  model_acquirer.py  plumbing_default_stages.py  plumbing_test_runner.py  qlora_trainer.py  quality_matrix.py  report_assembler.py  roofline_analyzer.py  roofline_chart.py  sweep_charts.py  sweep_runner.py  sweep_service.py  sweep_stats.py
src/on_prem_llm_lab/shared/: airllm_cpu_patch.py  automodel_factory.py  config.py  env_guard.py  gatekeeper.py  gatekeeper_state.py  logging_setup.py  paths.py  plumbing_guard.py  ram_sampler.py  rate_limit_config.py  version.py
tests/: conftest.py
tests/integration/: test_airllm_backend_integration.py  test_benchmark_runner_with_direct_backend.py  test_env_init_required.py  test_gatekeeper_queue.py  test_hardware_scanner_writes.py  test_plumbing_test_runner.py  test_sweep_requires_plumbing.py
tests/unit/: test_check_file_size.py  test_env_bootstrap.py  test_smoke.py
tests/unit/test_backends/: conftest.py  test_airllm_backend.py  test_base.py  test_direct_backend.py  test_init_uses_automodel.py
tests/unit/test_backends/fixtures/: _bad_concrete_import.py
tests/unit/test_cli/: test_main.py  test_main_airllm.py  test_main_baseline.py
tests/unit/test_mixins/: test_energy_accounting_mixin.py  test_manifest_logging_mixin.py  test_memory_sampling_mixin.py  test_timing_mixin.py
tests/unit/test_sdk/: test_sdk.py  test_sdk_baseline.py  test_sdk_plumbing.py  test_sdk_sweep.py
tests/unit/test_services/: test_airllm_service.py  test_baseline_service.py  test_benchmark_runner.py  test_economic_math.py  test_hardware_scanner.py  test_plumbing_default_stages.py  test_plumbing_test_runner.py  test_quality_matrix.py  test_roofline_analyzer.py  test_sweep_runner.py  test_sweep_stats.py
tests/unit/test_shared/: conftest.py  test_automodel_factory.py  test_env_guard.py  test_gatekeeper.py  test_gatekeeper_retry.py  test_plumbing_guard.py  test_quantization_matrix.py  test_rate_limit_config.py  test_version.py
tools/: analyze_sweep.py  baseline_witness.py  check_file_size.py  check_forbidden_tools.py
